# RayTracer

./: .gitignore  LICENSE  Makefile  README.md
ray-tracer/: CMakeLists.txt
ray-tracer/include/: Camera.cuh  CameraSettings.cuh  Color.cuh  CpuRendered.cuh  CpuRenderer.cuh  CudaCompat.cuh  FrameBuffer.cuh  GpuScene.cuh  Object.cuh  Quaternion.cuh  Ray.cuh  Renderer.cuh  Scene.cuh  Vec3.cuh
ray-tracer/include/gpuObjects/: GpuSphere.cuh
ray-tracer/include/objects/: Light.cuh  Object.cuh  Sphere.cuh
ray-tracer/include/renderer/: CpuRenderer.cuh  GpuRenderer.cuh  IRenderer.cuh
ray-tracer/src/: Camera.cu  CpuRenderer.cu  main.cu
ray-tracer/src/gpuObjects/: GpuSphere.cu
ray-tracer/src/objects/: Sphere.cu
ray-tracer/src/renderer/: CpuRenderer.cu  GpuRenderer.cu
ray-tracer/tests/: CMakeLists.txt  TestCamera.cpp  TestVec3.cpp
ray-tracer/tests/utils/: Matchers.hpp
